<resources>

    <string name="app_name">رونق</string>
    <string name="navigation_drawer_open" translatable="false">drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">drawer_close</string>

    <string name="recover_pass">إستعادة كلمة المرور</string>
    <string name="send">إرسال</string>
    <string name="phone">الجوال</string>
    <string name="code">كود التحقق</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تاكيد كلمة المرور</string>
    <string name="code_sent">  لقد تم إرسال كود التحقق علي جوالك \n
        برجاء إدخال كود التحقق وكلمة المرور الجديدة</string>
    <string name="app_service">التطبيق يقدم خدمته لكي ولك</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forget_pass">نسيت كلمة المرور؟</string>
    <string name="without_register">تصفح بدون تسجيل</string>
    <string name="sign_up">تسجيل مستخدم جديد</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="name">الإسم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="user">مستخدم</string>
    <string name="owner">مزود خدمة</string>
    <string name="map">الخريطة</string>
    <string name="agree">أوافق علي سياسة الإستخدام</string>
    <string name="test_serviceName">العناية بأسنان</string>
    <string name="test_serviceDesciption">العناية بالأسنان و صحتهاو كل ما يخص صحة الأسنان</string>
    <string name="advanced_search">بحث متقدم</string>
    <string name="closestToMe">الأقرب لي</string>
    <string name="rating">الأعلي تقييما</string>
    <string name="offers">العروض</string>
    <string name="addToFav">إضافة للمفضلة</string>
    <string name="availableInHome">متاح في المنزل</string>
    <string name="test_serviceProviderName">كوافير حريمي</string>
    <string name="test_serviceProviderAddress">جدة بجوار مول جدة الرئيسي</string>
    <string name="search">بحث</string>
    <string name="rating_service">تقييمات وأراء مستخدمي\n</string>
    <string name="rating2">تقييم ورأي</string>
    <string name="reserve_now">احجز موعدالآن</string>
    <string name="home_cost">يضاف مبلغ ٥٠ ريال إضافي مقابل تقديم الخدمة في المنزل</string>
    <string name="contact_with">تواصل مع</string>
    <string name="select_service">إختر من خدمات</string>
    <string name="select_address">إختر التاريخ المناسب لك</string>
    <string name="notes">ملاحظات علي الطلب</string>
    <string name="send_order">إرسال الطلب</string>
    <string name="home_service">أريد الخدمة في المنزل</string>
    <string name="at_home">في المنزل</string>
    <string name="canel_reservation">إلغاء الطلب</string>
    <string name="edit_reserve">تعديل الطلب</string>
    <string name="test_title">العنوان</string>
    <string name="myAccount">بياناتي</string>
    <string name="myOrders">طلباتي</string>
    <string name="favorites">المفضلة</string>
    <string name="aboutsUs">عن التطبيق</string>
    <string name="terms">سياسة الإستخدام</string>
    <string name="contactUs">اتصل بنا</string>
    <string name="lang">ENG</string>
    <string name="hello">مرحبا المستخدم</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="test_price">300 ريال</string>
    <string name="send_message">أو راسلنا علي نموزج الإتصال لشكوي او مقترح</string>
    <string name="subject">عنوان الرسالة</string>
    <string name="content">نص الرسالة</string>
    <string name="benefits">مميزات التطبيق</string>
    <string name="currency">ريال سعودي</string>
    <string name="save">حفظ</string>
    <string name="special_offer">عرض خاص</string>
    <string name="men">رجال</string>
    <string name="women">نساء</string>
    <string name="all">الجميع</string>
    <string name="serviceFor">تقدم الخدمة لل</string>
    <string name="servicePrice">سعر الخدمة</string>
    <string name="offerPrice">السعر في العرض</string>
</resources>
