<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView39"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView40"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/serviceFor"
            app:layout_constraintStart_toStartOf="@+id/spinner2"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/men"
            android:gravity="center"
            android:padding="6dp"
            android:button="@drawable/radio_selector"
            app:layout_constraintStart_toStartOf="@+id/textView41"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/women"
            android:gravity="center"
            android:padding="6dp"
            android:button="@drawable/radio_selector"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
            app:layout_constraintEnd_toStartOf="@+id/radioButton3"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toTopOf="@+id/radioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/all"
            android:gravity="center"
            android:padding="6dp"
            android:button="@drawable/radio_selector"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioButton2" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/servicePrice"
            android:background="@drawable/curved_corners_with_stroke"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/currency"
            android:textColor="@color/blueLight"
            app:layout_constraintBottom_toBottomOf="@+id/editText10"
            app:layout_constraintStart_toEndOf="@+id/editText10"
            app:layout_constraintTop_toTopOf="@+id/editText10" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:padding="6dp"
            android:button="@drawable/checkbox_selector"
            android:text="@string/special_offer"
            app:layout_constraintStart_toStartOf="@+id/editText10"
            app:layout_constraintTop_toBottomOf="@+id/editText10" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/offerPrice"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="number"
            android:background="@drawable/curved_corners_with_stroke"
            app:layout_constraintStart_toStartOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/currency"
            android:textColor="@color/blueLight"
            app:layout_constraintBottom_toBottomOf="@+id/editText11"
            app:layout_constraintStart_toEndOf="@+id/editText11"
            app:layout_constraintTop_toTopOf="@+id/editText11" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:background="@mipmap/bg_reservation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText11" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>