<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/rawnaq_bg" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/rawnaq_logo" />

    <TextView
        android:id="@+id/fragment_sign_up_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/droid_kufi_bold"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/fragment_sign_up_et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="7dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_et_name" />

    <EditText
        android:id="@+id/fragment_sign_up_et_confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_et_password" />

        <Button
            android:id="@+id/fragment_sign_up_btn_signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/curved_corners_blue"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_cb_agree" />

        <EditText
        android:id="@+id/fragment_sign_up_et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_tv_title" />

    <EditText
        android:id="@+id/fragment_sign_up_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="7dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_et_email" />

    <EditText
        android:id="@+id/fragment_sign_up_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/curved_corners_white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_et_phone" />

        <RadioButton
            android:id="@+id/fragment_sign_up_rb_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_kufi_regular"
            android:text="@string/user"
            android:gravity="center"
            android:textColor="@color/white"
            android:button="@drawable/radio_white_selector"
            android:textSize="18sp"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="@+id/fragment_sign_up_et_confirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_et_confirmPassword" />

        <RadioButton
            android:id="@+id/fragment_sign_up_rb_serviceProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_kufi_regular"
            android:text="@string/owner"
            android:padding="6dp"
            android:gravity="center"
            android:button="@drawable/radio_white_selector"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/fragment_sign_up_et_confirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_et_confirmPassword" />

        <CheckBox
            android:id="@+id/fragment_sign_up_cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:padding="6dp"
            android:button="@drawable/checkbox_white_selector"
            android:text="@string/agree"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_rb_user" />


        <ImageView
            android:id="@+id/fragment_sign_up_iv_bottomBg"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_btn_signUp"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/fragment_sign_up_tv_title4"
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_sign_up_iv_bottomBg"
            app:layout_constraintEnd_toEndOf="@+id/fragment_sign_up_iv_bottomBg"
            app:layout_constraintStart_toStartOf="@+id/fragment_sign_up_iv_bottomBg"
            app:layout_constraintTop_toTopOf="@+id/fragment_sign_up_iv_bottomBg" />

        <TextView
            android:id="@+id/fragment_sign_up_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_sign_up_tv_title4"
            app:layout_constraintEnd_toStartOf="@+id/fragment_sign_up_tv_title4"
            app:layout_constraintStart_toStartOf="@+id/fragment_sign_up_iv_bottomBg"
            app:layout_constraintTop_toTopOf="@+id/fragment_sign_up_tv_title4"
            app:layout_constraintVertical_bias="0.692" />

        <TextView
            android:id="@+id/fragment_sign_up_tv_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/without_register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_sign_up_tv_title4"
            app:layout_constraintEnd_toEndOf="@+id/fragment_sign_up_iv_bottomBg"
            app:layout_constraintStart_toEndOf="@+id/fragment_sign_up_tv_title4"
            app:layout_constraintTop_toTopOf="@+id/fragment_sign_up_tv_title4" />


        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>